@@ -1,4 +1,4 @@
 DIST Finance-Quote-1.49.tar.gz 274659 BLAKE2B 1fb4523a576960b48b855807945ef79bb18f68c82c5cf8eece8dcea910c3bc2669dd07e635d74cd0a85639d9eff27337687faf5a4fc213bedde4ee720d6e6149 SHA512 5b4b8836e1529409f1f6aa41345bf906ba2cc1c1b44e89b59765a883cf0db082cef9df91a4eaa671e494f5e9a842c4e1fbfcc31e57964d74f7895f3e25c4d91c
-EBUILD Finance-Quote-1.490.0.ebuild 1344 BLAKE2B 9a24f84200e93ed9469bdc4ab2daf40bb4039b79d870111f45c8bc4472995f89c1c18b112f87d61331c2a8292d6375c72da49338b392337ab1f93435f205ce76 SHA512 648e2b92559902b776e6d815c3e921baeab3b33844da3f7cda96297afa5fb838afebab5ff81e882e062b35a0375f75ebcc7d1ac7c927b1f770a2cc84e319868b
-MISC ChangeLog 210 BLAKE2B f4552dadc723de6851dbda802d181b828c81cc8db577aa8b2a7dd7ccc6f3959bdf4aeb148fa39dcc1a591172d2550a97d59cccd35e0637ca1916de8bfb3b1377 SHA512 e6d74113587e3898e6e9978c27456a5dfb5db199d741fe040123fc0bf0f05be81323d9df8af7302f3cea6fd7a646b744769345dcf4d6f6f1d208b076f2c94fbf
+EBUILD Finance-Quote-1.490.0-r1.ebuild 1392 BLAKE2B 712f08d90c4518cc5a47421bfe448118798256609f5be4333c8c8b6548330bfbfd484b64c172d799a3461460030c752699137157406cb68bc53f6d5a8b5be3a1 SHA512 280a7a6e37a6290d206397e39e4a1a9f154fc474b272873170f70935b73619494ea466f8da854ef704b1f3a6f9b6805ec4cee9be0425afed232cad58c241e854
+MISC ChangeLog 421 BLAKE2B 5b4044e0ff847cba22254f5f3c3988bdf5c8df5d639ce330b0c2da798f8f8fd490a0b6850d5e48de78f16eb46d6bd5190af248de5688a00e18db102be1af8bfc SHA512 c249441554f6bb7e1691db250f93ac124d415285ad3423871e6bb5d9454f5582666a6b0ca4c0dc623f62da00805a232c3ea248f25cc17da0a5509658b2a6b313
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
