@@ -1,3 +1,9 @@
+*Finance-Quote-1.490.0-r1 (07 Mar 2020)
+
+  07 Mar 2020; Manuel Friedli <manuel@fritteli.ch>
+  +Finance-Quote-1.490.0-r1.ebuild, -Finance-Quote-1.490.0.ebuild:
+  dev-perl/Finance-Quote: Update/fix dependencies.
+
 *Finance-Quote-1.490.0 (07 Mar 2020)
 
   07 Mar 2020; Manuel Friedli <manuel@fritteli.ch>
